--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Diego Palomino">
     <meta name="description" content="Pokedex Project- Freecodecamp">
+    <link rel="stylesheet" href="styles.css">
     <title>Pokedex</title>
 </head>
 <body>
@@ -27,4 +28,5 @@
     </div>
     <div class="pokeCase back"></div>
 </body>
+<script src="index.js"></script>
 </html>
